[gd_scene load_steps=4 format=3 uid="uid://beby82wnfkt4d"]

[ext_resource type="Script" uid="uid://cfanrscmj8qn4" path="res://Scripts/player.gd" id="1_dnjla"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6p3mc"]
radius = 6.9997334
height = 33.998707

[sub_resource type="CircleShape2D" id="CircleShape2D_6p3mc"]
radius = 13.038404

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_dnjla")

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 5.0000005)
rotation = 1.579535
shape = SubResource("CapsuleShape2D_6p3mc")

[node name="animation_player" type="AnimatedSprite2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_6p3mc")

[node name="camera_player" type="Camera2D" parent="."]

[node name="shoot_point" type="Marker2D" parent="."]
